--- a/assets/includes/header.html
+++ b/assets/includes/header.html
@@ -65,12 +65,7 @@
                             حسابي
                         </a>
                     </li>
-                    <li style="border-top: 1px solid #ebebeb;">
-                        <a href="contact.html"
-                            style="display: block; padding: 10px 0; color: var(--tp-common-black); font-size: 14px; font-weight: 500;">
-                            اتصل بنا
-                        </a>
-                    </li>
+
                 </ul>
             </div>
 
@@ -199,7 +194,7 @@
                                     <ul>
                                         <li><a href="index.html">الرئيسية</a></li>
                                         <li><a href="about.html">من نحن</a></li>
-                                        <li class="has-dropdown">
+                                        <li class="has-dropdown no-mobile-submenu">
                                             <a href="shop.html">الفئات</a>
                                             <ul class="tp-submenu">
                                                 <li class="has-dropdown">
