Add Cart link to mobile menu

--- a/assets/includes/header.html
+++ b/assets/includes/header.html
@@ -222,6 +222,7 @@
                                             </ul>
                                         </li>
                                         <li><a href="wishlist.html">المفضلة</a></li>
+                                        <li class="d-xl-none"><a href="cart.html">السلة</a></li>
                                         <li><a href="contact.html">اتصل بنا</a></li>
                                     </ul>
                                 </nav>
