--- a/assets/includes/footer.html
+++ b/assets/includes/footer.html
@@ -14,10 +14,14 @@
                         <p class="tp-footer-desc" style="color: var(--tp-common-white) !important;">غين وجهتك الاولى
                            للآناقة</p>
                         <div class="tp-footer-social">
-                           <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                           <a href="#"><i class="fa-brands fa-tiktok"></i></a>
-                           <a href="#"><i class="fa-brands fa-snapchat"></i></a>
-                           <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                           <a href="#" style="background-color: red; color: white; border: 1px solid white;"><i
+                                 class="fa-brands fa-instagram"></i></a>
+                           <a href="#" style="background-color: red; color: white; border: 1px solid white;"><i
+                                 class="fa-brands fa-tiktok"></i></a>
+                           <a href="#" style="background-color: red; color: white; border: 1px solid white;"><i
+                                 class="fa-brands fa-snapchat"></i></a>
+                           <a href="#" style="background-color: red; color: white; border: 1px solid white;"><i
+                                 class="fa-brands fa-whatsapp"></i></a>
                         </div>
                      </div>
                   </div>
@@ -30,7 +34,6 @@
                            <li><a href="profile.html">ملفي الشخصي</a></li>
                            <li><a href="wishlist.html">المفضلة</a></li>
                            <li><a href="cart.html">سلة التسوق</a></li>
-                           <li><a href="profile.html">سجل الطلبات</a></li>
                         </ul>
                      </div>
                   </div>
