--- a/assets/includes/footer.html
+++ b/assets/includes/footer.html
@@ -108,7 +108,7 @@
    <div class="tp-footer-area tp-footer-style-2" style="background-color: var(--tp-theme-primary) !important;">
       <div class="tp-footer-top pt-95 pb-40">
          <div class="container">
-            <div class="row">
+            <div class="row justify-content-center">
                <div class="col-xl-4 col-lg-3 col-md-4 col-sm-6 col-6">
                   <div class="tp-footer-widget footer-col-1 mb-50">
                      <div class="tp-footer-widget-content">
